--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ JWT_REFRESH_EXPIRATION_DAYS=30
 # Number of minutes after which a reset password token expires
 JWT_RESET_PASSWORD_EXPIRATION_MINUTES=10
 
+# List of whitelisted IPs, separated by commas
+WHITELIST=127.0.0.1
